# lib_euler

./: CMakeLists.txt  README.md  WORKSPACE  gtest.BUILD
big_int/include/: signed.h
big_int/src/: bcd.cpp  unsigned.cpp
big_int/test/: CMakeLists.txt  bcd_test.cpp  unsigned_test.cpp
euler/big_int/include/: bcd.h  unsigned.h
euler/big_int/src/: signed.cpp
euler/big_int/test/: signed_test.cpp
euler/introspection/: containers_test.cpp
euler/iterables/: BUILD  demo.cpp  iterables.md  permutation_test.cpp  subset.cpp  subset.h  subset_test.cpp
euler/linear/: BUILD  demo.cpp  matrix.h  matrix_test.cpp  vector.h
euler/nums/: BUILD  nums.md  prime_test.cpp  primes.cpp  primes.h  theory.cpp  theory.h  theory_test.cpp
euler/serialize/: BUILD  printing.h  printing_test.cpp
introspection/: BUILD  containers.h  containers_test.cpp
introspection/include/: .printing.h.swp
introspection/src/: nothing.cpp
introspection/test/: .main.cpp.swp  main.cpp
iterables/: BUILD  CMakeLists.txt  permutation_test.cpp  subset.h  subset_test.cpp
iterables/include/: first.h  permutation.h
iterables/src/: first.cpp
iterables/test/: main.cpp
nums/: BUILD  CMakeLists.txt  prime_test.cpp  primes.cpp  theory.cpp  theory_test.cpp
nums/include/: .theory.h.swp  primes.h  theory.h
nums/src/: primes.cpp  theory.cpp
nums/test/: CMakeLists.txt  prime_test.cpp  theory_test.cpp
serialize/: BUILD  printing.h  printing_test.cpp
serialize/include/: .printing.h.swp  printing.h
serialize/src/: printing.cpp
serialize/test/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
